# Vagante_Imitation

./: .gitignore
TeamProj_Vagante/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  FireBall.cpp  FireBall.h  GameScene.cpp  Map.cpp  Map.h  Player.cpp  Player.h  UI.cpp  UI.h  animation.cpp  animation.h  bat.cpp  bat.h  button.h  collision.cpp  collision.h  commonMacroFunction.h  database.h  debugDraw.cpp  debugDraw.h  effectManager.h  gameNode.cpp  gameNode.h  goblin.cpp  goblin.h  image.cpp  image.h  imageManager.cpp  imageManager.h  iniDataManager.cpp  iniDataManager.h  keyAniManager.cpp  keyAniManager.h  (+27 more)
